--- a/bsconfig.json
+++ b/bsconfig.json
@@ -5,7 +5,10 @@
   "sources": [
     {
       "dir": "src",
-      "subdirs": true
+      "subdirs": [
+        { "dir": "__tests__", "type": "dev" },
+        { "dir": "__generated__", "subdirs": true }
+      ]
     }
   ],
   "package-specs": [{ "module": "es6", "in-source": true }],
