--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "bs-react-testing-library": "^0.7.3",
     "graphql": "15.1.0",
     "jest": "^26.0.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "0.0.0-experimental-d28bd2994",
+    "react-dom": "0.0.0-experimental-d28bd2994",
     "react-relay": "0.0.0-experimental-8058ef82",
     "reason-promise": "1.1.1",
     "reason-react": "^0.9.1",
     "reason-relay": "0.11.0",
-    "relay-compiler": "9.0.0",
-    "relay-config": "9.0.0",
-    "relay-runtime": "9.0.0",
+    "relay-compiler": "10.0.1",
+    "relay-config": "10.0.1",
+    "relay-runtime": "10.0.1",
     "snowpack": "^2.5.4"
   }
 }
