--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "relay-config": "10.0.1",
     "relay-runtime": "10.0.1",
     "snowpack": "^2.5.4"
+  },
+  "resolutions": {
+    "react": "0.0.0-experimental-d28bd2994",
+    "react-dom": "0.0.0-experimental-d28bd2994"
   }
 }
